fixing header image link and h1 smaller font size on mobile

--- a/client/responsive.import.less
+++ b/client/responsive.import.less
@@ -15,6 +15,9 @@
   .col-xs-7 {
     padding-right: 0px;
   }
+  h1 {
+    font-size: 40px;
+  }
 }
 
 @media (min-width: 600px) and (max-width: 767px) {
